infra/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: astraguard-policy
  namespace: astraguard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: astra-guard
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/astraguard/sa/default"]
